# 2do-tools

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run-server.sh  server.py
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: prepare-release-pr.yml  py-compile.yml  release.yml  ruff.yml  tests.yml
docs/superpowers/specs/: 2026-05-29-uvx-distribution-design.md
mcpb/: README.md  manifest.json  server.py
plugins/2do/: .mcp.json  README.md
plugins/2do/.claude-plugin/: plugin.json
plugins/2do/.codex-plugin/: plugin.json
plugins/2do/skills/2do-daily-review/: SKILL.md
plugins/2do/skills/2do-setup-diagnostics/: SKILL.md
plugins/2do/skills/2do-task-lookup/: SKILL.md
scripts/: build-mcpb.sh  prepare-release.sh  release.sh  release_metadata.py
src/_2do_mcp/: cli.py  server.py  storage.py  url_schemes.py
src/_2do_tools/: callback_helper.py  cli.py  render.py  server.py  storage.py  task_creation.py  task_mutations.py  url_schemes.py
tests/: test_callback_helper.py  test_cli.py  test_release_automation.py  test_release_metadata.py  test_render.py  test_server.py  test_task_creation.py  test_task_mutations.py  test_url_schemes.py
