[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "2do-tools"
version = "0.3.0"
description = "MCP server for reading tasks from 2Do on macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp==3.3.1",
  "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.5.0",
  "pytest==9.0.3",
  "ruff==0.15.15",
]

[project.scripts]
"2do" = "_2do_tools.cli:main_2do"
"2do-tools" = "_2do_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/_2do_tools"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
