[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "2do-tools"
version = "0.9.0"
description = "MCP server and CLI to read, create, and complete tasks in 2Do on macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "cryptography==48.0.1",
  "fastmcp==3.4.2",
  "pydantic==2.13.4",
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "ruff==0.15.16",
]

[project.scripts]
"2do" = "_2do_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/_2do_tools"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
